feat: add markdown styling and update project configuration
- Add comprehensive markdown.css with prose-changelog styling for both light and dark themes
- Include unbuild dependency in package.json and bun.lock
- Format biome.json includes array for better readability
- Import new markdown stylesheet in main.css

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -3,6 +3,10 @@
         "undo": "Undo",
         "redo": "Redo",
         "undo_tooltip": "Undo the last action",
-        "redo_tooltip": "Redo the last undone action"
+        "redo_tooltip": "Redo the last undone action",
+        "changelogs": {
+            "title": "Whats New",
+            "close": "Close"
+        }
     }
 }
