--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -3,6 +3,10 @@
         "undo": "Rückgängig",
         "redo": "Wiederholen",
         "undo_tooltip": "Rückgängig machen der letzten Aktion",
-        "redo_tooltip": "Wiederholen der letzten rückgängig gemachten Aktion"
+        "redo_tooltip": "Wiederholen der letzten rückgängig gemachten Aktion",
+        "changelogs": {
+            "title": "Was ist neu",
+            "close": "Schließen"
+        }
     }
 }
