feat: add @nuxtjs/mdc package for markdown content handling
Add @nuxtjs/mdc dependency to enable markdown content processing with syntax highlighting. Update biome.json ignore patterns to include CSS files but remove Vue file exclusion.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -5,7 +5,7 @@
         "undo_tooltip": "Undo the last action",
         "redo_tooltip": "Redo the last undone action",
         "changelogs": {
-            "title": "Whats New",
+            "title": "What's New",
             "close": "Close"
         }
     }
