--- a/playground/server/changelogs/v1.10.0.md
+++ b/playground/server/changelogs/v1.10.0.md
@@ -1,8 +1,7 @@
-{
-    "published_at": "2025-11-20",
-    "version": "1.10.0",
-    "title": "Version 1.10.0 Released"
-}
+---
+published_at: "2025-11-20"
+version: "1.10.0"
+title: "Version 1.10.0 Released"
 ---
 # Version 1.10.0
 We are excited to announce the release of version 1.10.0 of our Common UI module! This release marks a significant milestone in our journey to provide a robust and user-friendly interface for developers.
