feat: add online status indicator and readiness check API

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -7,6 +7,8 @@
         "changelogs": {
             "title": "What's New",
             "close": "Close"
-        }
+        },
+        "online": "Everything is up and running",
+        "offline": "Some services are unavailable, features may be limited"
     }
 }
