--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -7,6 +7,8 @@
         "changelogs": {
             "title": "Was ist neu",
             "close": "Schließen"
-        }
+        },
+        "online": "Alles ist in Betrieb",
+        "offline": "Einige Dienste sind nicht verfügbar, Funktionen können eingeschränkt sein"
     }
 }
