fix: update German translation for online status message

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -8,7 +8,7 @@
             "title": "Was ist neu",
             "close": "Schließen"
         },
-        "online": "Alles ist in Betrieb",
+        "online": "Alles Dienste sind verfügbar",
         "offline": "Einige Dienste sind nicht verfügbar, Funktionen können eingeschränkt sein"
     }
 }
