Introduce OnlineStatus with i18n and props
Add a realtime health indicator component with configurable showText and
pollInterval props and automatic polling. Add new translation keys for
online/offline title and description. Integrate indicator into the
playground NavigationBar. Rename and tidy various components to
PascalCase and apply minor formatting fixes and cleanup.

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -8,7 +8,11 @@
             "title": "Was ist neu",
             "close": "Schließen"
         },
-        "online": "Alles Dienste sind verfügbar",
-        "offline": "Einige Dienste sind nicht verfügbar, Funktionen können eingeschränkt sein"
+        "health_status": {
+            "online_title": "Online",
+            "offline_title": "Offline",
+            "online_description": "Alles Dienste sind verfügbar",
+            "offline_description": "Einige Dienste sind nicht verfügbar, Funktionen können eingeschränkt sein"
+        }
     }
 }
